Remove sensitive information from .env
Cleared sensitive API keys and user agent from .env file.

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 LANGCHAIN_TRACING_V2="true"
-LANGCHAIN_API_KEY="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"
-GOOGLE_API_KEY="AIzaSyBHTHEqueYjQhNzsVC6-XeTcihzfGTXUT0"
-USER_AGENT="TheDankoeLettersBot/1.0 (hngga7@gmail.com)"
+LANGCHAIN_API_KEY=""
+GOOGLE_API_KEY=""
+USER_AGENT=""
 
 
